<resources>
    <string name="app_name">Attune</string>
    <string name="app_version_number">1.0</string>
    <string name="title_activity_main">Attune</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Category">Categoría</string>
    <string name="title_activity_login">Attune</string>
    <string name="login_app">Iniciar sesión</string>
    <string name="spotifyIcon">Spotify</string>
    <string name="playlist_duration">Duración total de la playlist (minutos)</string>
    <string name="song_duration">Duración de las canciones (minutos)</string>
    <string name="cover_art_description">Cover art</string>
    <string name="txt_songs">Canciones: \u0020</string>
    <string name="txt_genre">Género: \u0020</string>
    <string name="txt_tempo">Bpm: \u0020</string>
    <string name="txt_artist">Artista: \u0020</string>
    <string name="playlist_name">Nombre</string>
    <string name="low_fem">Baja</string>
    <string name="high_fem">Alta</string>
    <string name="low_masc">Bajo</string>
    <string name="high_masc">Alto</string>
    <string name="valence">Positivismo</string>
    <string name="speachiness">Presencia de voz en las canciones</string>
    <string name="popularity">Popularidad</string>
    <string name="loudness">Sonoridad (db)</string>
    <string name="liveness">Posibilidad de música en directo</string>
    <string name="instrumentalness">Instrumentalidad</string>
    <string name="energy">Energía</string>
    <string name="danceability">Bailabilidad</string>
    <string name="acousticness">Acústica</string>
    <string name="add_genre">Añadir una categoría</string>
    <string name="accept">Aceptar</string>
    <string name="select_image">Selecciona una imagen</string>
    <string name="please_set_name">Por favor, póngale un nombre a su nueva playlist</string>
    <string name="please_select_genre">Por favor, seleccione una categoría</string>
    <string name="creating_playlist">Creando playlist…</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="no_data_available_playlist">No hay ninguna lista de reproducción creada, abre el menú de la izquierda para crear una nueva.</string>
    <string name="automatic_search">Búsqueda automática</string>
    <string name="manual_search">Búsqueda manual</string>
    <string name="select_genre_list">No hay ninguna categoría seleccionada</string>
    <string name="search_hint">Búsqueda</string>
    <string name="select_mode">Selecciona un modo</string>
    <string name="date">Fecha:</string>
    <string name="title_filter">Filtro</string>
    <string name="content_filter" />
    <string name="agree">Aceptar</string>
    <string name="disagree">Cancelar</string>
    <string name="txt_filter_date">Fecha:</string>
    <string name="date_filter_range">Rango de años</string>
    <string name="no_manual_data_available">No hay resultados, introduce algún criterio de búsqueda</string>
    <string name="select_manual_mode">Selecciona una opción</string>
    <string name="select_playlist">Selecciona la playlist</string>
    <string name="no_data_available_short_list_playlist">No hay ninguna playlist creada</string>
    <string name="txt_empty_filter">Sin filtros</string>
    <string name="validate_name">El nombre de la playlist es obligatorio</string>
    <string name="validate_name_exists">Ya existe una playlist con ese nombre.</string>
    <string name="no_data_available_songs">Esta playlist no tiene ninguna canción, añade nuevas desde el modo automático o el modo manual.</string>
    <string name="select_playlist_option">Seleccione una opción</string>
    <string name="obligatory_name">El nombre es obligatorio.</string>
    <string name="duration">Duración</string>
    <string name="playlist_creating">Creando playlist…</string>
    <string name="create_new_playlist">Crear nueva playlist</string>
    <string name="playlists_menu">Playlists</string>
    <string name="txt_share">Compartir</string>
    <string name="txt_playlist_create">Crear playlist</string>
    <string-array name="modes">
        <item>Automático</item>
        <item>Manual</item>
    </string-array>
    <string-array name="manual_modes">
        <item>Reproducir</item>
        <item>Añadir a playlist existente</item>
        <item>Crear en nueva playlist</item>
    </string-array>
    <string-array name="playlist_options">
        <item>Reproducir</item>
        <item>Editar canciones</item>
        <item>Editar playlist</item>
        <item>Exportar a Spotify</item>
    </string-array>
    <string-array name="create_playlist_options">
        <item>Nueva playlist</item>
        <item>Añadir a una playlist ya existente</item>
    </string-array>
    <string-array name="song_options">
        <item>Reproducir</item>
        <item>Editar efecto</item>
    </string-array>
    <string-array name="effect_options">
        <item>Sin efecto</item>
        <item>Fade</item>
        <item>Solapamiento</item>
    </string-array>
    <array name="manual_search_genres_disallowed">
        <item>acoustic</item>
        <item>alternative</item>
        <item>alt-rock</item>
        <item>brazil</item>
        <item>british</item>
        <item>children</item>
        <item>chill</item>
        <item>club</item>
        <item>dance</item>
        <item>disney</item>
        <item>french</item>
        <item>garage</item>
        <item>german</item>
        <item>goth</item>
        <item>groove</item>
        <item>guitar</item>
        <item>happy</item>
        <item>heavy-metal</item>
        <item>holidays</item>
        <item>honky-tonk</item>
        <item>idm</item>
        <item>indian</item>
        <item>indie</item>
        <item>iranian</item>
        <item>kids</item>
        <item>latino</item>
        <item>malay</item>
        <item>metal-misc</item>
        <item>movies</item>
        <item>new-release</item>
        <item>party</item>
        <item>philippines-opm</item>
        <item>piano</item>
        <item>pop-film</item>
        <item>post-dubstep</item>
        <item>psych-rock</item>
        <item>punk-rock</item>
        <item>rainy-day</item>
        <item>r-n-b</item>
        <item>road-trip</item>
        <item>rock-n-roll</item>
        <item>romance</item>
        <item>sad</item>
        <item>songwriter</item>
        <item>soundtracks</item>
        <item>spanish</item>
        <item>study</item>
        <item>summer</item>
        <item>swedish</item>
        <item>turkish</item>
        <item>world-music</item>
    </array>
    <string name="menu_settings">Settings</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="playlist_loading">Recuperando playlists…</string>
    <string name="no_connection">Sin conexión</string>
    <string name="select_genre">Seleccione una categoría</string>
    <string name="validate_genres_valid">Al menos debes seleccionar una categoría</string>
    <string name="new_playlist">Nueva playlist</string>
    <string name="playlist_created">Playlist creada correctamente</string>
    <string name="song_added">Canción añadida correctamente a </string>
    <string name="txt_no_connection">Sin conexión, por favor conéctese a internet para usar correctamente la aplicación.</string>
    <string name="share_text">Conoce Attune, la app donde podrás crear tus propias playlists musicales. Descargala gratis en: http://www.attune.es</string>
    <string name="playlist_exported">Playlist exportada con éxito</string>
    <string name="premium_needed">Necesitas una cuenta premium para reproducir canciones.</string>
    <string name="playlist_delete">¿Está seguro de que desea borrar la playlist?</string>
    <string name="select_song_option">Opciones de la canción</string>
    <string name="select_effect_option">Efecto de transición</string>
    <string name="tempo">Tempo:</string>
    <string name="effect_no_effect">Sin efecto</string>
    <string name="effect_fade">Efecto: Fade</string>
    <string name="effect_overlap">Efecto: Overlap</string>
    <string name="separator"> - </string>
    <string name="zero">0</string>
    <string name="error_ocurred">Se ha producido un error, por favor intentelo de nuevo.</string>
    <string name="txt_loading_session">Iniciando sesión..</string>
    <string name="song_delete">¿Estás seguro de que quieres borrar la canción seleccionada?</string>
    <string name="automatic_search_mode">Búsqueda automática</string>
    <string name="manual_search_mode">Búsqueda manual</string>
    <string name="share_app">Comparte la aplicación</string>
    <string name="logout">Cerrar sesión</string>
    <string name="lost_permission">La reproducción se ha detenido por que se está reproduciendo en otro dispositivo.</string>
    <string name="logging_player">Iniciando sesión en el reproductor...</string>
    <string name="player_state">Player state</string>
    <string name="set_playlist_name">Nombre de la playlist</string>
    <string name="spotify">Spotify</string>
    <string name="twitter">Twitter</string>
    <string name="set_image_playlist">Imagen de la nueva playlist</string>
    <string name="no_song_found">No se han encontrado canciones, por favor inténtelo de nuevo con otros parámetros.</string>
</resources>
