<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_playlist"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/create_new_playlist" />

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist_play_white_24px"
            android:title="@string/playlists_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/txt_share" />
        </menu>
    </item>

</menu>
