<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ManualMode">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint" />

    <LinearLayout
        android:id="@+id/filter_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_filter_shape">

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/ic_filter_list_black_24dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_filter_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_empty_filter"
            android:layout_margin="5dp"
            android:visibility="gone"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/empty_manual_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/no_manual_data_available"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/search_manual_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:indeterminate="true"
        />

</LinearLayout>